add english part url

--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -574,14 +574,14 @@
 											<tbody>
 												<tr>
 													<td><a
-														href="http://117.78.38.89:8080/dokuwiki/doku.php?id=能力中心:international:国际化资源"><span>Business
+														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_email"><span>Business
 																email</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Meeting skills</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:meeting_skills"><span>Meeting skills</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Office
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:office_communication"><span>Office
 																communication</span></a></td>
 												</tr>
 
@@ -601,13 +601,13 @@
 										<table class="table table-condensed">
 											<tbody>
 												<tr>
-													<td><a href="URL"><span>Report proposal</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:report_proposal"><span>Report proposal</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Business plan</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_plan"><span>Business plan</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Contract agreement</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:contract_agreement"><span>Contract agreement</span></a></td>
 
 												</tr>
 											</tbody>
@@ -625,13 +625,13 @@
 										<table class="table table-condensed">
 											<tbody>
 												<tr>
-													<td><a href="URL"><span>Self introduction</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:self_introduction"><span>Self introduction</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Stand-up meeting</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:stand-up_meeting"><span>Stand-up meeting</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Project meeting</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_meeting"><span>Project meeting</span></a></td>
 												</tr>
 											</tbody>
 										</table>
@@ -651,15 +651,15 @@
 										<table class="table table-condensed">
 											<tbody>
 												<tr>
-													<td><a href="URL"><span>Exchange meeting</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:exchange_meeting"><span>Exchange meeting</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Project
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_presentation"><span>Project
 																presentation</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="URL"><span>Business
-																negociation</span></a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_negotiation"><span>Business
+																negotiation</span></a></td>
 												</tr>
 
 											</tbody>
