--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -543,6 +543,43 @@
 										</div>
 
 									</div>
+									
+									<div class="col-md-3">
+										<div class="feature-center animate-box"
+											data-animate-effect="fadeInUp">
+											<span class="icon"> <i class="icon-eye"></i>
+											</span>
+											<h3>人力资源管理</h3>
+											<p>
+											<table class="table table-condensed">
+												<tbody>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:1.ehs%E7%AE%A1%E7%90%86%E7%9F%A5%E8%AF%86">EHS管理知识</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:2.release%E7%AE%A1%E7%90%86%E7%9F%A5%E8%AF%86"><span>Release管理知识</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:3.rm%E6%97%A5%E5%B8%B8%E6%93%8D%E4%BD%9C%E7%9F%A5%E8%AF%86"><span>RM日常操作知识</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:4.%E5%91%98%E5%B7%A5%E7%AE%A1%E7%90%86%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86"><span>员工管理基础知识</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:5.%E6%9C%89%E6%95%88%E6%B2%9F%E9%80%9A"><span>有效沟通</span></a></td>
+													</tr>
+
+												</tbody>
+											</table>
+											</p>
+										</div>
+
+									</div>
 								</div>
 
 							</div>
@@ -574,14 +611,14 @@
 											<tbody>
 												<tr>
 													<td><a
-														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_email"><span>Business
+														href="http://117.78.38.89:8080/dokuwiki/doku.php?id=能力中心:international:国际化资源"><span>Business
 																email</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:meeting_skills"><span>Meeting skills</span></a></td>
+													<td><a href="URL"><span>Meeting skills</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:office_communication"><span>Office
+													<td><a href="URL"><span>Office
 																communication</span></a></td>
 												</tr>
 
@@ -601,13 +638,13 @@
 										<table class="table table-condensed">
 											<tbody>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:report_proposal"><span>Report proposal</span></a></td>
+													<td><a href="URL"><span>Report proposal</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_plan"><span>Business plan</span></a></td>
+													<td><a href="URL"><span>Business plan</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:contract_agreement"><span>Contract agreement</span></a></td>
+													<td><a href="URL"><span>Contract agreement</span></a></td>
 
 												</tr>
 											</tbody>
@@ -625,13 +662,13 @@
 										<table class="table table-condensed">
 											<tbody>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:self_introduction"><span>Self introduction</span></a></td>
+													<td><a href="URL"><span>Self introduction</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:stand-up_meeting"><span>Stand-up meeting</span></a></td>
+													<td><a href="URL"><span>Stand-up meeting</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_meeting"><span>Project meeting</span></a></td>
+													<td><a href="URL"><span>Project meeting</span></a></td>
 												</tr>
 											</tbody>
 										</table>
@@ -651,15 +688,15 @@
 										<table class="table table-condensed">
 											<tbody>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:exchange_meeting"><span>Exchange meeting</span></a></td>
+													<td><a href="URL"><span>Exchange meeting</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_presentation"><span>Project
+													<td><a href="URL"><span>Project
 																presentation</span></a></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_negotiation"><span>Business
-																negotiation</span></a></td>
+													<td><a href="URL"><span>Business
+																negociation</span></a></td>
 												</tr>
 
 											</tbody>
