--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -907,7 +907,7 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td>软件测试及软件测试缺陷的基本概念</td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5" target="_blank">软件测试及软件测试缺陷的基本概念</a></td>
 
 														<td>陶爱华</td>
 														<td></td>
@@ -917,7 +917,7 @@
 													</tr>
 
 													<tr>
-														<td>软件测试的方法</td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%9A%84%E6%96%B9%E6%B3%95" target="_blank">软件测试的方法</a></td>
 
 														<td>陶爱华</td>
 														<td></td>
