--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -323,7 +323,7 @@
 		</div>
 		<div class=" " id="trainingService1">
 			<div class="container">
-				<h1 class="text-center title" >技术服务目录</h1>
+				<h1 class="text-center title" >业务服务目录</h1>
 				<div class="separator"></div>
 					<div class="col-md-12">
 						<div class="panel-group" id="trainingAccordion" role="tablist" aria-multiselectable="true">
@@ -360,13 +360,13 @@
 								<div id="trainingCollapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading2">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+											<a href="/" target="_blank">1. XX业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. 微信银行 </a>
+											<a href="" target="_blank">2. XX业务 </a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">3. VTM</a>
+											<a href="" target="_blank">3. XX业务</a>
 										</div>
 									</div>
 								</div>
@@ -382,13 +382,13 @@
 								<div id="trainingCollapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading3">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+											<a href="/" target="_blank">1. XX业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. 微信银行 </a>
+											<a href="" target="_blank">2. XX业务 </a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">3. VTM</a>
+											<a href="" target="_blank">3. XX业务</a>
 										</div>
 									</div>
 								</div>
@@ -404,13 +404,13 @@
 								<div id="trainingCollapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading4">
 									<div class="panel-body">
 										<div class="col-md-4">
-											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+											<a href="/" target="_blank">1. XX业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. 微信银行 </a>
+											<a href="" target="_blank">2. XX业务 </a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">3. VTM</a>
+											<a href="" target="_blank">3. XX业务</a>
 										</div>
 									</div>
 								</div>
