--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -547,131 +547,147 @@
 
 							</div>
 						</div>
-					</div>
 
+						<div id="a5" class="panel panel-default">
+							<div class="panel-heading" role="tab" id="trainingHeading5">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#trainingAccordion"
+										href="#trainingCollapse5" aria-expanded="true"
+										aria-controls="trainingCollapse5"> 国际化赋能 </a>
+								</h4>
+							</div>
+							<div id="trainingCollapse5" class="panel-collapse collapse in"
+								role="tabpanel" aria-labelledby="trainingHeading5">
+								<div class="panel-body">
+									<div class="col-md-3">
+										<div class="feature-center animate-box"
+											data-animate-effect="fadeInUp">
+											<span class="icon"> <i class="icon-eye"></i>
+											</span>
+											<h3>初级读写课程</h3>
+											<p>
+											<table class="table table-condensed">
+												<tbody>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_email"><span>Business
+																	email</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:meeting_skills"><span>Meeting
+																	skills</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:office_communication"><span>Office
+																	communication</span></a></td>
+													</tr>
 
+												</tbody>
+											</table>
+											</p>
+										</div>
 
+									</div>
+									<div class="col-md-3">
+										<div class="feature-center animate-box"
+											data-animate-effect="fadeInUp">
+											<span class="icon"> <i class="icon-eye"></i>
+											</span>
+											<h3>进阶读写课程</h3>
+											<p>
+											<table class="table table-condensed">
+												<tbody>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:report_proposal"><span>Report
+																	proposal</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_plan"><span>Business
+																	plan</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:contract_agreement"><span>Contract
+																	agreement</span></a></td>
 
-					<div id="a5" class="panel panel-default">
-						<div class="panel-heading" role="tab" id="trainingHeading5">
-							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#trainingAccordion"
-									href="#trainingCollapse5" aria-expanded="true"
-									aria-controls="trainingCollapse5"> 国际化赋能 </a>
-							</h4>
-						</div>
-						<div id="trainingCollapse5" class="panel-collapse collapse in"
-							role="tabpanel" aria-labelledby="trainingHeading5">
-							<div class="panel-body">
-								<div class="col-md-3">
-									<div class="feature-center animate-box"
-										data-animate-effect="fadeInUp">
-										<span class="icon"> <i class="icon-eye"></i>
-										</span>
-										<h3>初级读写课程</h3>
-										<p>
-										<table class="table table-condensed">
-											<tbody>
-												<tr>
-													<td><a
-														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_email"><span>Business
-																email</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:meeting_skills"><span>Meeting skills</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:office_communication"><span>Office
-																communication</span></a></td>
-												</tr>
+													</tr>
+												</tbody>
+											</table>
+											</p>
+										</div>
+									</div>
+									<div class="col-md-3">
+										<div class="feature-center animate-box"
+											data-animate-effect="fadeInUp">
+											<span class="icon"> <i class="icon-eye"></i>
+											</span>
+											<h3>职场必备口语</h3>
+											<p>
+											<table class="table table-condensed">
+												<tbody>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:self_introduction"><span>Self
+																	introduction</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:stand-up_meeting"><span>Stand-up
+																	meeting</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_meeting"><span>Project
+																	meeting</span></a></td>
+													</tr>
+												</tbody>
+											</table>
+											</p>
+										</div>
 
-											</tbody>
-										</table>
-										</p>
 									</div>
 
-								</div>
-								<div class="col-md-3">
-									<div class="feature-center animate-box"
-										data-animate-effect="fadeInUp">
-										<span class="icon"> <i class="icon-eye"></i>
-										</span>
-										<h3>进阶读写课程</h3>
-										<p>
-										<table class="table table-condensed">
-											<tbody>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:report_proposal"><span>Report proposal</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_plan"><span>Business plan</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:contract_agreement"><span>Contract agreement</span></a></td>
 
-												</tr>
-											</tbody>
-										</table>
-										</p>
+									<div class="col-md-3">
+										<div class="feature-center animate-box"
+											data-animate-effect="fadeInUp">
+											<span class="icon"> <i class="icon-eye"></i>
+											</span>
+											<h3>高级管理口语</h3>
+											<p>
+											<table class="table table-condensed">
+												<tbody>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:exchange_meeting"><span>Exchange
+																	meeting</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_presentation"><span>Project
+																	presentation</span></a></td>
+													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_negotiation"><span>Business
+																	negotiation</span></a></td>
+													</tr>
+
+												</tbody>
+											</table>
+											</p>
+										</div>
+
 									</div>
-								</div>
-								<div class="col-md-3">
-									<div class="feature-center animate-box"
-										data-animate-effect="fadeInUp">
-										<span class="icon"> <i class="icon-eye"></i>
-										</span>
-										<h3>职场必备口语</h3>
-										<p>
-										<table class="table table-condensed">
-											<tbody>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:self_introduction"><span>Self introduction</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:stand-up_meeting"><span>Stand-up meeting</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_meeting"><span>Project meeting</span></a></td>
-												</tr>
-											</tbody>
-										</table>
-										</p>
-									</div>
-
-								</div>
-
-
-								<div class="col-md-3">
-									<div class="feature-center animate-box"
-										data-animate-effect="fadeInUp">
-										<span class="icon"> <i class="icon-eye"></i>
-										</span>
-										<h3>高级管理口语</h3>
-										<p>
-										<table class="table table-condensed">
-											<tbody>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:exchange_meeting"><span>Exchange meeting</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:project_presentation"><span>Project
-																presentation</span></a></td>
-												</tr>
-												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:business_negotiation"><span>Business
-																negotiation</span></a></td>
-												</tr>
-
-											</tbody>
-										</table>
-										</p>
-									</div>
-
 								</div>
 							</div>
 						</div>
-					</div>
 
+					</div>
 
 				</div>
 
