修改DIV嵌套错误

--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -845,7 +845,7 @@
 								</div>
 							</div>
 						</div>
-
+					</div>
 
 
 					</div>
@@ -858,7 +858,7 @@
 
 			</div>
 
-
+	</div>
 
 			<!-- JavaScript files placed at the end of the document so the pages load faster
 		================================================== -->
