update english part

--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -427,8 +427,18 @@
 														&nbsp;&nbsp;&nbsp;&nbsp;<a
 														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:closing"><span>Closing</span></a>
 															<br/>
+													</td>
+												</tr>
+												<tr>
+													<td><a><span>Meet your boss/customer</span></a><br/>
 														&nbsp;&nbsp;&nbsp;&nbsp;<a
-														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:meet_your_boss_customer"><span>Meet your boss/customer</span></a>
+														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:socializing_first_meeting"><span>Socializing/First meeting</span></a>
+															<br/>
+														&nbsp;&nbsp;&nbsp;&nbsp;<a
+														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:conquer_the_fear"><span>Conquer the fear</span></a>
+															<br/>
+														&nbsp;&nbsp;&nbsp;&nbsp;<a
+														href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:international:%E5%9B%BD%E9%99%85%E5%8C%96%E8%B5%84%E6%BA%90:cultural_awareness"><span>Cultural awareness</span></a>
 															<br/>
 													</td>
 												</tr>
