--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -109,10 +109,11 @@
 
 
                                         <li><a href="../SpiderNet/service/manage/loginPage.html">SpiderNet</a></li>
+                                        <li><a href="http://xa.chinasoftosg.com/lms/login.html">技能鉴定</a></li>
 
 
                                         <li><a href="knowledge.html">知识库</a></li>
-                                        <li><a href="#about">关于能力中心</a></li>
+                                        <li><a href="#about">关于</a></li>
                                     </ul>
                                 </div>
 
