--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -13,8 +13,8 @@
 <!-- Mobile Meta -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Favicon -->
-<link rel="shortcut icon" href="images/favicon.ico">
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="images/logo.png">
 
 <!-- Web Fonts -->
 
