--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -13,8 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="images/favicon.ico">
-
+		<link rel="shortcut icon" href="images/logo.png">
 		<!-- Web Fonts -->
 
 
