--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -12,7 +12,8 @@
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!-- Favicon -->
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="images/logo.png">
 	
 
 		<!-- Web Fonts -->
