update for selling

--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -471,7 +471,7 @@
 							<div class="col-md-8">
 								<img src="./images/yunshebei2.jpg" alt="">
 							</div>
-							</p>
+
 						</div>
 					</div>
 					<div class="modal-footer">
@@ -584,10 +584,10 @@
 					<!-- isotope filters start -->
 					<div class="filters text-center">
 						<ul class="nav nav-pills">
-							<li class="active"><a href="#" data-filter="*">All</a></li>
-							<li class=""><a href="#" data-filter=".SOLUTION">SOLUTION</a></li>
-							<li class=""><a href="#" data-filter=".INTERNATIONALIZATION">INTERNATIONALIZATION</a></li>
-							<li class=""><a href="#" data-filter=".DEVICE_CLOUD">DEVICE_CLOUD</a></li>
+							<li class="active"><a href="#" data-filter="*">全部</a></li>
+							<li class=""><a href="#" data-filter=".SOLUTION">产品解决方案</a></li>
+							<li class=""><a href="#" data-filter=".INTERNATIONALIZATION">服务解决方案</a></li>
+							<li class=""><a href="#" data-filter=".DEVICE_CLOUD">能力解决方案</a></li>
 						</ul>
 					</div>
 					<!-- isotope filters end -->
@@ -600,28 +600,11 @@
 								<div class="overlay-container">
 									<img src="./images/ODC.jpg" alt=""> <a class="overlay"
 										data-toggle="modal" data-target="#project-1"> <i
-										class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										class="fa fa-search-plus"></i> <span>产品解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-1">西安ODC方案</a>
-							</div>
-							<!-- Modal -->
-
-							<!-- Modal end -->
-						</div>
-
-						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
-							<div class="image-box">
-								<div class="overlay-container">
-									<img src="./images/fuwumulu1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-2">
-										<i class="fa fa-search-plus"></i> <span>INTERNATIONALIZATION
-									</span>
-									</a>
-								</div>
-								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-2">HSBC业务线服务目录总览</a>
+									data-target="#project-1">VTM解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -631,9 +614,26 @@
 						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
 							<div class="image-box">
 								<div class="overlay-container">
+									<img src="./images/fuwumulu1.jpg" alt=""> <a
+										class="overlay" data-toggle="modal" data-target="#project-2">
+										<i class="fa fa-search-plus"></i> <span>产品解决方案
+									</span>
+									</a>
+								</div>
+								<a class="btn btn-default btn-block" data-toggle="modal"
+									data-target="#project-2">MVTM解决方案</a>
+							</div>
+							<!-- Modal -->
+
+							<!-- Modal end -->
+						</div>
+
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
+							<div class="image-box">
+								<div class="overlay-container">
 									<img src="./images/minjie1.jpg" alt=""> <a
 										class="overlay" data-toggle="modal" data-target="#project-3">
-										<i class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
@@ -644,12 +644,12 @@
 							<!-- Modal end -->
 						</div>
 
-						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
+						<div class="col-sm-6 col-md-3 isotope-item DEVICE_CLOUD">
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/jianshe.jpg" alt=""> <a
 										class="overlay" data-toggle="modal" data-target="#project-4">
-										<i class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										<i class="fa fa-search-plus"></i> <span>能力解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
@@ -660,32 +660,32 @@
 							<!-- Modal end -->
 						</div>
 
-						<div class="col-sm-6 col-md-3 isotope-item DEVICE_CLOUD">
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
 							<div class="image-box">
 								<div class="overlay-container">
-									<img src="./images/yunnengli1.jpg" alt=""> <a
+									<img src="./images/shujuqianyi1.jpg" alt=""> <a
 										class="overlay" data-toggle="modal" data-target="#project-5">
-										<i class="fa fa-search-plus"></i> <span>DEVICE_CLOUD</span>
+										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-5">HSBC业务线云能力解决方案</a>
+									data-target="#project-5">HSBC业务线数据迁移能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
 							<!-- Modal end -->
 						</div>
 
-						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
+						<div class="col-sm-6 col-md-3 isotope-item DEVICE_CLOUD">
 							<div class="image-box">
 								<div class="overlay-container">
-									<img src="./images/shujuqianyi1.jpg" alt=""> <a
+									<img src="./images/english-p1.jpg" alt=""> <a
 										class="overlay" data-toggle="modal" data-target="#project-6">
-										<i class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										<i class="fa fa-search-plus"></i> <span>能力解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-6">HSBC业务线数据迁移能力解决方案</a>
+									data-target="#project-6">HSBC业务线英语培训能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -695,93 +695,93 @@
 						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
 							<div class="image-box">
 								<div class="overlay-container">
-									<img src="./images/english-p1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-7">
-										<i class="fa fa-search-plus"></i> <span>INTERNATIONALIZATION</span>
-									</a>
-								</div>
-								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-7">HSBC业务线英语培训能力解决方案</a>
-							</div>
-							<!-- Modal -->
-
-							<!-- Modal end -->
-						</div>
-
-						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
-							<div class="image-box">
-								<div class="overlay-container">
 									<img src="./images/yuanshuju2.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-8">
-										<i class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										class="overlay" data-toggle="modal" data-target="#project-7">
+										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-8">HSBC业务线元数据治理能力解决方案</a>
+									data-target="#project-7">HSBC业务线元数据治理能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
 							<!-- Modal end -->
 						</div>
 
-						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/PCF1.jpg" alt=""> <a class="overlay"
-										data-toggle="modal" data-target="#project-9"> <i
-										class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										data-toggle="modal" data-target="#project-8"> <i
+										class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-9">PCF解决方案</a>
+									data-target="#project-8">PCF解决方案</a>
 							</div>
 							<!-- Modal -->
 
 							<!-- Modal end -->
 						</div>
 
-						<div class="col-sm-6 col-md-3 isotope-item DEVICE_CLOUD">
-							<div class="image-box">
-								<div class="overlay-container">
-									<img src="./images/yunshebei1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-10">
-										<i class="fa fa-search-plus"></i> <span>DEVICE_CLOUD</span>
-									</a>
-								</div>
-								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-10">HSBC设备云测解决方案</a>
-							</div>
-							<!-- Modal -->
-
-							<!-- Modal end -->
-						</div>
-
-						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
-							<div class="image-box">
-								<div class="overlay-container">
-									<img src="./images/wechat-bk1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-11">
-										<i class="fa fa-search-plus"></i> <span>SOLUTION</span>
-									</a>
-								</div>
-								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-11">HSBC 微信银行解决方案</a>
-							</div>
-							<!-- Modal -->
-
-							<!-- Modal end -->
-						</div>
-
-						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/renlianshibie1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-12">
-										<i class="fa fa-search-plus"></i> <span>SOLUTION</span>
+										class="overlay" data-toggle="modal" data-target="#project-11">
+										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-12">HSBC业务线人脸识别能力解决方案</a>
+									data-target="#project-11">HSBC业务线人脸识别能力解决方案</a>
+							</div>
+							<!-- Modal -->
+
+							<!-- Modal end -->
+						</div>
+
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
+							<div class="image-box">
+								<div class="overlay-container">
+									<img src="./images/yunnengli1.jpg" alt=""> <a
+										class="overlay" data-toggle="modal" data-target="#project-12">
+									<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
+								</a>
+								</div>
+								<a class="btn btn-default btn-block" data-toggle="modal"
+								   data-target="#project-12">Mortgage 解决方案</a>
+							</div>
+							<!-- Modal -->
+
+							<!-- Modal end -->
+						</div>
+
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
+							<div class="image-box">
+								<div class="overlay-container">
+									<img src="./images/wechat-bk1.jpg" alt=""> <a
+										class="overlay" data-toggle="modal" data-target="#project-10">
+									<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
+								</a>
+								</div>
+								<a class="btn btn-default btn-block" data-toggle="modal"
+								   data-target="#project-10">HSBC 微信银行解决方案</a>
+							</div>
+							<!-- Modal -->
+
+							<!-- Modal end -->
+						</div>
+
+						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
+							<div class="image-box">
+								<div class="overlay-container">
+									<img src="./images/yunshebei1.jpg" alt=""> <a
+										class="overlay" data-toggle="modal" data-target="#project-9">
+									<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
+								</a>
+								</div>
+								<a class="btn btn-default btn-block" data-toggle="modal"
+								   data-target="#project-9">HSBC设备云测解决方案</a>
 							</div>
 							<!-- Modal -->
 
