update for selling

--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -161,17 +161,21 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-1-label">西安ODC方案</h4>
+						<h4 class="modal-title" id="project-1-label">VTM解决方案</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
 						<div class="row">
 							<div class="col-md-4">
-								<p>ChinaSoft Overview</p>
-								<p>Current presence in HSBC</p>
+								<p>1.View of Retail Banking Development</p>
+								<p>2.Introduction VTM</p>
+                                <p>3.Advantage of VTM</p>
+                                <p>4.VTM Solution</p>
+                                <p>5.VTM Tendency</p>
+                                <p>6.Successful Cases</p>
 							</div>
 							<div class="col-md-8">
-								<img src="./images/ODC1.jpg" alt="">
+								<img src="./images/VTM.JPG" alt="">
 							</div>
 						</div>
 					</div>
@@ -190,17 +194,21 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-2-label">HSBC业务线服务目录总览</h4>
+						<h4 class="modal-title" id="project-2-label">MVTM解决方案</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
 						<div class="row">
 							<div class="col-md-4">
-								<p>overview去介绍HSBC业务线所覆盖的银行业务</p>
-								<p></p>
+                                <p>1.View of Retail Banking Development</p>
+                                <p>2.Introduction VTM</p>
+                                <p>3.Advantage of VTM</p>
+                                <p>4.VTM Solution</p>
+                                <p>5.VTM Tendency</p>
+                                <p>6.Successful Cases</p>
 							</div>
 							<div class="col-md-8">
-								<img src="./images/fuwumulu2.jpg" alt="">
+								<img src="./images/MVTM.JPG" alt="">
 							</div>
 						</div>
 					</div>
@@ -289,19 +297,20 @@
 						<button type="button" class="close" data-dismiss="modal">
 							<span aria-hidden="true">×</span><span class="sr-only">Close</span>
 						</button>
-						<h4 class="modal-title" id="project-5-label">HSBC业务线云能力解决方案</h4>
+						<h4 class="modal-title" id="project-5-label">MORTGAGE解决方案</h4>
 					</div>
 					<div class="modal-body">
 						<h3></h3>
 						<div class="row">
 							<div class="col-md-4" style="width: 30%;">
-								<p>Precision Marketing Solution</p>
-								<p>Credit Limit Platform solution</p>
-								<p>Integrated risk monitoring solution</p>
-								<p>Operational monitoring & Control System</p>
+								<p>1.Global Mortgage System</p>
+								<p>2.Process & Features</p>
+								<p>3.Regionalization</p>
+								<p>4.Framework & Technologies</p>
+                                <p>5.Delivery Capability</p>
 							</div>
 							<div class="col-md-8">
-								<img src="./images/yunnengli2.jpg" alt="">
+								<img src="./images/mortgage.JPG" alt="">
 							</div>
 						</div>
 					</div>
@@ -598,7 +607,7 @@
 						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
 							<div class="image-box">
 								<div class="overlay-container">
-									<img src="./images/ODC.jpg" alt=""> <a class="overlay"
+									<img src="./images/VTM.JPG" alt=""> <a class="overlay"
 										data-toggle="modal" data-target="#project-1"> <i
 										class="fa fa-search-plus"></i> <span>产品解决方案</span>
 									</a>
@@ -614,7 +623,7 @@
 						<div class="col-sm-6 col-md-3 isotope-item SOLUTION">
 							<div class="image-box">
 								<div class="overlay-container">
-									<img src="./images/fuwumulu1.jpg" alt=""> <a
+									<img src="./images/MVTM.JPG" alt=""> <a
 										class="overlay" data-toggle="modal" data-target="#project-2">
 										<i class="fa fa-search-plus"></i> <span>产品解决方案
 									</span>
@@ -664,12 +673,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/shujuqianyi1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-5">
+										class="overlay" data-toggle="modal" data-target="#project-6">
 										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-5">HSBC业务线数据迁移能力解决方案</a>
+									data-target="#project-6">HSBC业务线数据迁移能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -680,12 +689,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/english-p1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-6">
+										class="overlay" data-toggle="modal" data-target="#project-7">
 										<i class="fa fa-search-plus"></i> <span>能力解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-6">HSBC业务线英语培训能力解决方案</a>
+									data-target="#project-7">HSBC业务线英语培训能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -696,12 +705,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/yuanshuju2.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-7">
+										class="overlay" data-toggle="modal" data-target="#project-8">
 										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-7">HSBC业务线元数据治理能力解决方案</a>
+									data-target="#project-8">HSBC业务线元数据治理能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -712,12 +721,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/PCF1.jpg" alt=""> <a class="overlay"
-										data-toggle="modal" data-target="#project-8"> <i
+										data-toggle="modal" data-target="#project-9"> <i
 										class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-8">PCF解决方案</a>
+									data-target="#project-9">PCF解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -728,12 +737,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/renlianshibie1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-11">
+										class="overlay" data-toggle="modal" data-target="#project-12">
 										<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-11">HSBC业务线人脸识别能力解决方案</a>
+									data-target="#project-12">HSBC业务线人脸识别能力解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -743,13 +752,13 @@
 						<div class="col-sm-6 col-md-3 isotope-item INTERNATIONALIZATION">
 							<div class="image-box">
 								<div class="overlay-container">
-									<img src="./images/yunnengli1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-12">
+									<img src="./images/mortgage.JPG" alt=""> <a
+										class="overlay" data-toggle="modal" data-target="#project-5">
 									<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 								</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-								   data-target="#project-12">Mortgage 解决方案</a>
+								   data-target="#project-5">Mortgage 解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -760,12 +769,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/wechat-bk1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-10">
+										class="overlay" data-toggle="modal" data-target="#project-11">
 									<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 								</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-								   data-target="#project-10">HSBC 微信银行解决方案</a>
+								   data-target="#project-11">HSBC 微信银行解决方案</a>
 							</div>
 							<!-- Modal -->
 
@@ -776,12 +785,12 @@
 							<div class="image-box">
 								<div class="overlay-container">
 									<img src="./images/yunshebei1.jpg" alt=""> <a
-										class="overlay" data-toggle="modal" data-target="#project-9">
+										class="overlay" data-toggle="modal" data-target="#project-10">
 									<i class="fa fa-search-plus"></i> <span>服务解决方案</span>
 								</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-								   data-target="#project-9">HSBC设备云测解决方案</a>
+								   data-target="#project-10">HSBC设备云测解决方案</a>
 							</div>
 							<!-- Modal -->
 
